# RPi-OP-TEE-Verified-Boot

./: .gitignore  LICENSE  Makefile  README.md  add-signature-node.py  config-its-linux.sh  config-its-u-boot.sh  config-u-boot-env-netboot.sh  config-u-boot-env.sh  dependencies-22.04.txt  image-build.py  kaslrGenerator.sh  mkimage  rpi_3_b_plus_fit_defconfig  tf-a-mod.py  u-boot.config  v2024.07-rpi_3_b_plus_fit_defconfig
.github/workflows/: makefile.yml  manual.yml  rust.yml
corruptor/: Cargo.toml  README.md
corruptor/src/: main.rs
docs/: Build Process.md  Linux.md  Network Boot.md  OP-TEE.md  README.md  Raspberry Pi.md  TF-A.md  U-Boot.md  Verified Boot.md
tests/: armstub8-tests.py  dtb-tests.py  fit-tests.py  key-tests.py
