[package]
name = "corruptor"
version = "0.1.2"
edition = "2021"
description = "A CLI tool built in Rust for randomly modifying binary file for use in testing verified and secure boot solutions"
license-file = "../LICENSE"
repository = "https://github.com/BT-Summer/RPi-OP-TEE-Verified-Boot"
keywords = ["cli", "tool", "binary", "testing"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
color-eyre = "0.6.3"
rand = "0.8.5"
